// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`personal-list GET / should render a child status tag in the lead or child column, for appeals linked as a child 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-l">Cases assigned to you</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <details class="govuk-details" data-module="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Filters</span>
                </summary>
                <div class="govuk-details__text">
                    <form method="GET">
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="filters-select">Show cases with status</label>
                            <select class="govuk-select" id="filters-select"
                            name="appealStatusFilter">
                                <option value="all">All</option>
                                <option value="ready_to_start">Ready to start</option>
                                <option value="lpa_questionnaire">LPA questionnaire</option>
                                <option value="issue_determination">Issue decision</option>
                            </select>
                        </div>
                        <div class="govuk-button-group">
                            <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                            id="filters-submit">Apply</button><a class="govuk-link" href="/appeals-service/personal-list">Clear filter</a>
                        </div>
                    </form>
                </div>
            </details>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Appeal reference</th>
                        <th scope="col" class="govuk-table__header">Lead or child</th>
                        <th scope="col" class="govuk-table__header">Action required</th>
                        <th scope="col" class="govuk-table__header">Due by</th>
                        <th scope="col" class="govuk-table__header">Case status</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/189" aria-label="Appeal 4 5 8 6 7 3">458673</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Lead</strong>
                        </td>
                        <td class="govuk-table__cell">LPA questionnaire overdue</td>
                        <td class="govuk-table__cell">8 April 2022</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow single-line">LPA questionnaire</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/161" aria-label="Appeal 6 8 5 0 2 0">685020</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Child</strong>
                        </td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/161/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 161</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/162" aria-label="Appeal 4 2 4 9 4 2">424942</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/162/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 162</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/163" aria-label="Appeal 7 6 9 2 0 7">769207</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/163/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 163</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/164" aria-label="Appeal 8 3 8 9 6">83896</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/164/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 164</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <nav class="govuk-pagination" role="navigation" aria-label="results">
                <ul class="govuk-pagination__list">
                    <li class="govuk-pagination__item govuk-pagination__item--current"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=1"
                        aria-label="Page 1" aria-current="page"> 1</a>
                    </li>
                    <li class="govuk-pagination__item"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                        aria-label="Page 2"> 2</a>
                    </li>
                </ul>
                <div class="govuk-pagination__next"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                    rel="next"><span class="govuk-pagination__link-title">Next</span><svg class="govuk-pagination__icon govuk-pagination__icon--next" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13"><path d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path></svg></a>
                </div>
            </nav>
        </div>
    </div>
</main>"
`;

exports[`personal-list GET / should render a lead status tag in the lead or child column, for appeals linked as a parent 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-l">Cases assigned to you</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <details class="govuk-details" data-module="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Filters</span>
                </summary>
                <div class="govuk-details__text">
                    <form method="GET">
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="filters-select">Show cases with status</label>
                            <select class="govuk-select" id="filters-select"
                            name="appealStatusFilter">
                                <option value="all">All</option>
                                <option value="ready_to_start">Ready to start</option>
                                <option value="lpa_questionnaire">LPA questionnaire</option>
                                <option value="issue_determination">Issue decision</option>
                            </select>
                        </div>
                        <div class="govuk-button-group">
                            <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                            id="filters-submit">Apply</button><a class="govuk-link" href="/appeals-service/personal-list">Clear filter</a>
                        </div>
                    </form>
                </div>
            </details>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Appeal reference</th>
                        <th scope="col" class="govuk-table__header">Lead or child</th>
                        <th scope="col" class="govuk-table__header">Action required</th>
                        <th scope="col" class="govuk-table__header">Due by</th>
                        <th scope="col" class="govuk-table__header">Case status</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/189" aria-label="Appeal 4 5 8 6 7 3">458673</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Lead</strong>
                        </td>
                        <td class="govuk-table__cell">LPA questionnaire overdue</td>
                        <td class="govuk-table__cell">8 April 2022</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow single-line">LPA questionnaire</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/161" aria-label="Appeal 6 8 5 0 2 0">685020</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Child</strong>
                        </td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/161/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 161</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/162" aria-label="Appeal 4 2 4 9 4 2">424942</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/162/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 162</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/163" aria-label="Appeal 7 6 9 2 0 7">769207</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/163/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 163</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/164" aria-label="Appeal 8 3 8 9 6">83896</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/164/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 164</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <nav class="govuk-pagination" role="navigation" aria-label="results">
                <ul class="govuk-pagination__list">
                    <li class="govuk-pagination__item govuk-pagination__item--current"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=1"
                        aria-label="Page 1" aria-current="page"> 1</a>
                    </li>
                    <li class="govuk-pagination__item"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                        aria-label="Page 2"> 2</a>
                    </li>
                </ul>
                <div class="govuk-pagination__next"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                    rel="next"><span class="govuk-pagination__link-title">Next</span><svg class="govuk-pagination__icon govuk-pagination__icon--next" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13"><path d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path></svg></a>
                </div>
            </nav>
        </div>
    </div>
</main>"
`;

exports[`personal-list GET / should render a message when there are no cases assigned to the user 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-l">There are currently no cases assigned to you.</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><a href="/appeals-service/all-cases" role="button" draggable="false" class="govuk-button govuk-button--secondary"
            data-module="govuk-button" id="search-all-cases"> Search all cases</a>
        </div>
    </div>
</main>"
`;

exports[`personal-list GET / should render an empty cell in the lead or child column, for appeals with no linked appeals (neither parent nor child) 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-l">Cases assigned to you</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <details class="govuk-details" data-module="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Filters</span>
                </summary>
                <div class="govuk-details__text">
                    <form method="GET">
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="filters-select">Show cases with status</label>
                            <select class="govuk-select" id="filters-select"
                            name="appealStatusFilter">
                                <option value="all">All</option>
                                <option value="ready_to_start">Ready to start</option>
                                <option value="lpa_questionnaire">LPA questionnaire</option>
                                <option value="issue_determination">Issue decision</option>
                            </select>
                        </div>
                        <div class="govuk-button-group">
                            <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                            id="filters-submit">Apply</button><a class="govuk-link" href="/appeals-service/personal-list">Clear filter</a>
                        </div>
                    </form>
                </div>
            </details>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Appeal reference</th>
                        <th scope="col" class="govuk-table__header">Lead or child</th>
                        <th scope="col" class="govuk-table__header">Action required</th>
                        <th scope="col" class="govuk-table__header">Due by</th>
                        <th scope="col" class="govuk-table__header">Case status</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/189" aria-label="Appeal 4 5 8 6 7 3">458673</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Lead</strong>
                        </td>
                        <td class="govuk-table__cell">LPA questionnaire overdue</td>
                        <td class="govuk-table__cell">8 April 2022</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow single-line">LPA questionnaire</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/161" aria-label="Appeal 6 8 5 0 2 0">685020</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Child</strong>
                        </td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/161/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 161</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/162" aria-label="Appeal 4 2 4 9 4 2">424942</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/162/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 162</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/163" aria-label="Appeal 7 6 9 2 0 7">769207</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/163/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 163</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/164" aria-label="Appeal 8 3 8 9 6">83896</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/164/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 164</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <nav class="govuk-pagination" role="navigation" aria-label="results">
                <ul class="govuk-pagination__list">
                    <li class="govuk-pagination__item govuk-pagination__item--current"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=1"
                        aria-label="Page 1" aria-current="page"> 1</a>
                    </li>
                    <li class="govuk-pagination__item"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                        aria-label="Page 2"> 2</a>
                    </li>
                </ul>
                <div class="govuk-pagination__next"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                    rel="next"><span class="govuk-pagination__link-title">Next</span><svg class="govuk-pagination__icon govuk-pagination__icon--next" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13"><path d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path></svg></a>
                </div>
            </nav>
        </div>
    </div>
</main>"
`;

exports[`personal-list GET / should render the first page of the personal list with the expected content and pagination 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-l">Cases assigned to you</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <details class="govuk-details" data-module="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Filters</span>
                </summary>
                <div class="govuk-details__text">
                    <form method="GET">
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="filters-select">Show cases with status</label>
                            <select class="govuk-select" id="filters-select"
                            name="appealStatusFilter">
                                <option value="all">All</option>
                                <option value="ready_to_start">Ready to start</option>
                                <option value="lpa_questionnaire">LPA questionnaire</option>
                                <option value="issue_determination">Issue decision</option>
                            </select>
                        </div>
                        <div class="govuk-button-group">
                            <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                            id="filters-submit">Apply</button><a class="govuk-link" href="/appeals-service/personal-list">Clear filter</a>
                        </div>
                    </form>
                </div>
            </details>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Appeal reference</th>
                        <th scope="col" class="govuk-table__header">Lead or child</th>
                        <th scope="col" class="govuk-table__header">Action required</th>
                        <th scope="col" class="govuk-table__header">Due by</th>
                        <th scope="col" class="govuk-table__header">Case status</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/189" aria-label="Appeal 4 5 8 6 7 3">458673</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Lead</strong>
                        </td>
                        <td class="govuk-table__cell">LPA questionnaire overdue</td>
                        <td class="govuk-table__cell">8 April 2022</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow single-line">LPA questionnaire</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/161" aria-label="Appeal 6 8 5 0 2 0">685020</a></strong>
                        </td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey single-line">Child</strong>
                        </td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/161/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 161</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/162" aria-label="Appeal 4 2 4 9 4 2">424942</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/162/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 162</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/163" aria-label="Appeal 7 6 9 2 0 7">769207</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/163/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 163</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/164" aria-label="Appeal 8 3 8 9 6">83896</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/164/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 164</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <nav class="govuk-pagination" role="navigation" aria-label="results">
                <ul class="govuk-pagination__list">
                    <li class="govuk-pagination__item govuk-pagination__item--current"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=1"
                        aria-label="Page 1" aria-current="page"> 1</a>
                    </li>
                    <li class="govuk-pagination__item"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                        aria-label="Page 2"> 2</a>
                    </li>
                </ul>
                <div class="govuk-pagination__next"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                    rel="next"><span class="govuk-pagination__link-title">Next</span><svg class="govuk-pagination__icon govuk-pagination__icon--next" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13"><path d="m8.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path></svg></a>
                </div>
            </nav>
        </div>
    </div>
</main>"
`;

exports[`personal-list GET / should render the header with navigation containing links to the personal list (with active modifier class), national list, and sign out route 1`] = `
"<header class="govuk-header" id="pins-applications-header" role="banner"
data-module="govuk-header">
    <div class="govuk-width-container">
        <div class="pins-row">
            <div class="pins-column--left">
                <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                </div><span>Planning Inspectorate</span>
            </div>
            <div class="pins-column--central">
                <p class="pins-header-domainname govuk-!-margin-top-1">Manage appeals</p>
                <nav class="govuk-header__navigation pins-header-navigation"
                aria-label="Menu">
                    <ul class="govuk-header__navigation-list">
                        <li class="govuk-header__navigation-item govuk-header__navigation-item--active"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                        </li>
                        <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                        </li>
                        <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                        </li>
                    </ul>
                </nav>
            </div>
        </div>
    </div>
</header>"
`;

exports[`personal-list GET / should render the second page of the personal list with applied filter, the expected content and pagination 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-l">Cases assigned to you</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <details class="govuk-details" data-module="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Filters</span>
                </summary>
                <div class="govuk-details__text">
                    <form method="GET">
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="filters-select">Show cases with status</label>
                            <select class="govuk-select" id="filters-select"
                            name="appealStatusFilter">
                                <option value="all">All</option>
                                <option value="ready_to_start">Ready to start</option>
                                <option value="lpa_questionnaire" selected>LPA questionnaire</option>
                                <option value="issue_determination">Issue decision</option>
                            </select>
                        </div>
                        <div class="govuk-button-group">
                            <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                            id="filters-submit">Apply</button><a class="govuk-link" href="/appeals-service/personal-list">Clear filter</a>
                        </div>
                    </form>
                </div>
            </details>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Appeal reference</th>
                        <th scope="col" class="govuk-table__header">Lead or child</th>
                        <th scope="col" class="govuk-table__header">Action required</th>
                        <th scope="col" class="govuk-table__header">Due by</th>
                        <th scope="col" class="govuk-table__header">Case status</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/165" aria-label="Appeal 3 3 3 6 0 0">333600</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/165/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 165</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <nav class="govuk-pagination" role="navigation" aria-label="results">
                <div class="govuk-pagination__prev"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=1&amp;pageNumber=1&amp;appealStatusFilter=lpa_questionnaire"
                    rel="prev"><svg class="govuk-pagination__icon govuk-pagination__icon--prev" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13"><path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path></svg><span class="govuk-pagination__link-title">Previous</span></a>
                </div>
                <ul class="govuk-pagination__list">
                    <li class="govuk-pagination__item"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=1&amp;pageNumber=1&amp;appealStatusFilter=lpa_questionnaire"
                        aria-label="Page 1"> 1</a>
                    </li>
                    <li class="govuk-pagination__item govuk-pagination__item--current"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=1&amp;pageNumber=2&amp;appealStatusFilter=lpa_questionnaire"
                        aria-label="Page 2" aria-current="page"> 2</a>
                    </li>
                </ul>
            </nav>
        </div>
    </div>
</main>"
`;

exports[`personal-list GET / should render the second page of the personal list with the expected content and pagination 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-l">Cases assigned to you</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <details class="govuk-details" data-module="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Filters</span>
                </summary>
                <div class="govuk-details__text">
                    <form method="GET">
                        <div class="govuk-form-group">
                            <label class="govuk-label" for="filters-select">Show cases with status</label>
                            <select class="govuk-select" id="filters-select"
                            name="appealStatusFilter">
                                <option value="all">All</option>
                                <option value="ready_to_start">Ready to start</option>
                                <option value="lpa_questionnaire">LPA questionnaire</option>
                                <option value="issue_determination">Issue decision</option>
                            </select>
                        </div>
                        <div class="govuk-button-group">
                            <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button"
                            id="filters-submit">Apply</button><a class="govuk-link" href="/appeals-service/personal-list">Clear filter</a>
                        </div>
                    </form>
                </div>
            </details>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Appeal reference</th>
                        <th scope="col" class="govuk-table__header">Lead or child</th>
                        <th scope="col" class="govuk-table__header">Action required</th>
                        <th scope="col" class="govuk-table__header">Due by</th>
                        <th scope="col" class="govuk-table__header">Case status</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/165" aria-label="Appeal 3 3 3 6 0 0">333600</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/165/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 165</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/166" aria-label="Appeal 2 1 6 9 1 1">216911</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/166/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 166</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/167" aria-label="Appeal 6 0 0 7 1 5">600715</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/167/start-case/add">Start case<span class="govuk-visually-hidden"> for appeal 167</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--turquoise single-line">Ready to start</strong>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell"><strong><a class="govuk-link" href="/appeals-service/appeal-details/168" aria-label="Appeal 7 0 0 9 1 0">700910</a></strong>
                        </td>
                        <td class="govuk-table__cell"></td>
                        <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/168/issue-decision/decision">Issue decision<span class="govuk-visually-hidden"> for appeal 168</span></a>
                        </td>
                        <td class="govuk-table__cell">7 January 2024</td>
                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--pink single-line">Issue decision</strong>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <nav class="govuk-pagination" role="navigation" aria-label="results">
                <div class="govuk-pagination__prev"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=1"
                    rel="prev"><svg class="govuk-pagination__icon govuk-pagination__icon--prev" xmlns="http://www.w3.org/2000/svg" height="13" width="15" aria-hidden="true" focusable="false" viewBox="0 0 15 13"><path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path></svg><span class="govuk-pagination__link-title">Previous</span></a>
                </div>
                <ul class="govuk-pagination__list">
                    <li class="govuk-pagination__item"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=1"
                        aria-label="Page 1"> 1</a>
                    </li>
                    <li class="govuk-pagination__item govuk-pagination__item--current"><a class="govuk-link govuk-pagination__link" href="/appeals-service/personal-list?pageSize=5&amp;pageNumber=2"
                        aria-label="Page 2" aria-current="page"> 2</a>
                    </li>
                </ul>
            </nav>
        </div>
    </div>
</main>"
`;
